--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           <td>Banks</td>
           <td><span id="autoclicker_level">owned: 0</span></td>
           <td><button id="buy_click" type="button" class="btn btn-success">Buy for $1</button></td>
+		  <td>Auto Choppers</td>
+		  <td><span id="autochopper_level">owned: 0</span></td>
+		  <td><button id="buy_chopper" type="button" class="btn btn-success">Buy for $1</button></td>
         </tr>
         <!--<tr>
           <td>Speed up by 10%</td>
@@ -49,6 +52,7 @@
 	<b>Manufacturing</b>
     <hr width="250" align="left">
 	<p>Money per <small id="time_period">1.00</small> second: <span id="clicks_per_second">0</span></p>
+	<p>Wood per <small id="time_period2">1.00</small> second: <span id="wood_per_second">0</span></p>
 </div>
 	<script type="text/javascript" src="main.js"></script>
 	 <script src="jquery.js"></script>
