--- a/website.html
+++ b/website.html
@@ -7,7 +7,7 @@
 
 <ul>
 	<li><a href="website.hmtl"><img id=Banner src="banner.png"></img></a></li>
-	<li><img src="divider.png"</img>
+	<li><img src="Divider.png"</img>
 	<li><img src="ResourcePacks.png"</img>
 	<li><a href="Talena.html"><img id=Banner src="Talena.png"></img></a></li>
 	<li><a href="contact.asp">Contact</a></li>
